@@ -23,7 +23,7 @@
 # IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
 # CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 #
-# $Id: pkgsort,v 1.24 2004/03/31 02:22:23 mej Exp $
+# $Id: pkgsort,v 1.25 2004/04/01 23:25:24 mej Exp $
 #
 
 # Include the Perl Modules we need
@@ -448,6 +448,7 @@ query_packages
     print "\nQuery complete.\n";
 }
 
+# FIXME:  Move to Config.pm if this thing is needed again.
 sub
 write_cache
 {
@@ -476,7 +477,7 @@ read_cache
     my (@inp, @fstat);
     local *CACHE;
 
-    open(CACHE, "<$ENV{HOME}/.pkgsort.cache") || return;
+    open(CACHE, "<$ENV{HOME}/.mezz/pkgsort/cache") || return;
     while (<CACHE>) {
         chomp($line = $_);
         next if ($skip && $line !~ /^S/);
@@ -866,7 +867,7 @@ main
     select STDOUT; $| = 1;
     if ($opt_v) {
         # Do not edit this variable.  It is updated automatically by CVS when you commit
-        my $rcs_info = 'CVS Revision $Revision: 1.24 $ created on $Date: 2004/03/31 02:22:23 $ by $Author: mej $ ';
+        my $rcs_info = 'CVS Revision $Revision: 1.25 $ created on $Date: 2004/04/01 23:25:24 $ by $Author: mej $ ';
 
         $rcs_info =~ s/\$\s*Revision: (\S+) \$/$1/;
         $rcs_info =~ s/\$\s*Date: (\S+) (\S+) \$/$1 at $2/;
